--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@prisma/client": "6.2.0",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -18,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.15.0",
     "prisma": "6.2.0",
     "stripe": "^16.12.0",
     "twilio": "^5.3.1",
